<resources>
    <string name="app_name">Counter News</string>

    <string name="title_news">News</string>
    <string name="title_favorites">Favorites</string>
    <string name="todo">TODO</string>
    <string name="share">share</string>
    <string name="abrir">ABRIR</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView</string>
    <string name="favorite">TODO</string>
</resources>